--- a/index.html
+++ b/index.html
@@ -94,21 +94,21 @@
   { question: "Of the following Officers, whose Statues CANNOT be earned through Officer Missions?", answer: "Angel of Light" },
   { question: "What event started World War 1?", answer: "The assassination of Archduke Franz Ferdinand" },
   { question: "Of the following Officers, whose Awakening Skill is able to trap enemy Ground Force Troops?", answer: "Winter Huntsman" },
-  { question: "In what year did the Battle of Britain take place?", answer: "1940" }
-  { question: "How do you increase the number of Airdrops you can call in?", answer: "Upgrading your Command Center" }
-  { question: "Who was the first commander of America's first tank corps?", answer: "George S. Patton" }
-  { question: "Of the following Officers, whose Statues can you earn by completing Main Missions?", answer: "Percy" }
-  { question: "What is the damage multiplier for Martyrs' Watch Rocket Launchers when they attack fortifications?", answer: "350%" }
-  { question: "What do Officer EXP Books do?", answer: "Grants EXP to Officers" }
-  { question: "Which of the following Unit types is most suitable for attacking Bases?", answer: "Howitzer" }
-  { question: "Of the following Officers, whose Tactical Skill deals more damage the farther away from the target they are?", answer: "Saber of the Nation" }
-  { question: "What is the max research speed boost you can get by upgrading the Research Center?", answer: "30%" }
-  { question: "How many Barracks can you build with a max-level Command Center?", answer: "5" }
-  { question: "In which war were tanks used for the first time?", answer: "World War 1" }
-  { question: "Which Camp's Bombers can deal damage to multiple enemy Troops?", answer: "Liberty Bombers" }
-  { question: "In WW2, which general was killed when his aircraft was shot down?", answer: "Isoroku Yamamoto" }
-  { question: "In WW1, which battle caused Germany's western front to collapse?", answer: "Second Battle of the Marne" }
-  { question: "Which of these countries was not an Allied power in WW2?", answer: "Spain" }
+  { question: "In what year did the Battle of Britain take place?", answer: "1940" },
+  { question: "How do you increase the number of Airdrops you can call in?", answer: "Upgrading your Command Center" },
+  { question: "Who was the first commander of America's first tank corps?", answer: "George S. Patton" },
+  { question: "Of the following Officers, whose Statues can you earn by completing Main Missions?", answer: "Percy" },
+  { question: "What is the damage multiplier for Martyrs' Watch Rocket Launchers when they attack fortifications?", answer: "350%" },
+  { question: "What do Officer EXP Books do?", answer: "Grants EXP to Officers" },
+  { question: "Which of the following Unit types is most suitable for attacking Bases?", answer: "Howitzer" },
+  { question: "Of the following Officers, whose Tactical Skill deals more damage the farther away from the target they are?", answer: "Saber of the Nation" },
+  { question: "What is the max research speed boost you can get by upgrading the Research Center?", answer: "30%" },
+  { question: "How many Barracks can you build with a max-level Command Center?", answer: "5" },
+  { question: "In which war were tanks used for the first time?", answer: "World War 1" },
+  { question: "Which Camp's Bombers can deal damage to multiple enemy Troops?", answer: "Liberty Bombers" },
+  { question: "In WW2, which general was killed when his aircraft was shot down?", answer: "Isoroku Yamamoto" },
+  { question: "In WW1, which battle caused Germany's western front to collapse?", answer: "Second Battle of the Marne" },
+  { question: "Which of these countries was not an Allied power in WW2?", answer: "Spain" },
   { question: "Which of the following statements about City Contribution Badges is correct?", answer: "They can be earned through the daily Arms Race event" }
 ];
 
